refactor: EventBenefit 클래스 presentMenu 정보를 EventDiscount 로 통합